--- a/ProjectRagnarock.csproj
+++ b/ProjectRagnarock.csproj
@@ -7,7 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Pages\MuseTales\" />
+    <Folder Include="wwwroot\Images\" />
+    <Folder Include="wwwroot\Sound\" />
   </ItemGroup>
 
 </Project>
