--- a/ProjectRagnarock.csproj
+++ b/ProjectRagnarock.csproj
@@ -11,4 +11,8 @@
     <Folder Include="wwwroot\Sound\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="NAudio" Version="2.2.1" />
+  </ItemGroup>
+
 </Project>
