--- a/ProjectRagnarock.csproj
+++ b/ProjectRagnarock.csproj
@@ -12,6 +12,8 @@
 
   <ItemGroup>
     <PackageReference Include="NAudio" Version="2.2.1" />
+    <PackageReference Include="QRCoder" Version="1.5.1" />
+    <PackageReference Include="System.Drawing.Common" Version="8.0.5" />
   </ItemGroup>
 
 </Project>
